[package]
name = "rustic-canvas-art"
version = "0.1.0"
edition = "2021"

[main]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustic-canvas-art"
path = "src/main.rs"

[dependencies]
macroquad = { version = "0.4", features = ["log-rs"] }
chrono = "0.4"
rfd = "0.10"
image = "0.24.6"

[profile.release]
opt-level = 2
